--- a/css/styles.css
+++ b/css/styles.css
@@ -241,14 +241,18 @@ section h1 {
 
 .section-what-we-do .container {
   display: grid;
-  /* grid: column repeat(2, 1fr) / repeat(3, 1fr); */
-  grid-template: 233px 1fr / 1fr 1fr 1fr;
-  /* grid-template-columns: 1fr 1fr 1fr; */
-  /* grid-template-rows: 1fr 2fr; */
-  grid-auto-flow: column;
-  gap: 0 20px;
+  grid-template: 1fr / 1fr 1fr 1fr;
+  grid-auto-flow: row;
+  gap: 20px 20px;
   min-width: 0;
   min-height: 0;
+  height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .section-what-we-do .container {
+    grid-template: 1fr 1fr / 1fr 1fr;
+  }  
 }
 
 .section-what-we-do .thumbnail-pic img {
@@ -280,7 +284,7 @@ section h1 {
   /* border: 2px solid red; */
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: 233px;
 }
 
 .section-what-we-do .writeup {
@@ -291,7 +295,14 @@ section h1 {
   font-size: 0.5em;
   padding: 0.4rem;
   background-color: rgba(0, 0, 0, 0.5);
+  flex-grow: 1;
 }
+
+.section-what-we-do .card {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
 
 .section-about-us .container {
   display: flex;
