--- a/css/styles.css
+++ b/css/styles.css
@@ -179,14 +179,17 @@ section h1 {
 
 .section-what-weve-done .flex-container {
   height: 1280px;
+  width: 100%;
   display: flex;
   flex-flow: column wrap;
-  align-items: center;
+  /* align-items: space-around; */
+  align-content: space-between;
+  /* border: 2px solid red; */
 }
 
 .section-what-weve-done .card {
   width: 30%;
-  margin: 1rem 1rem;
+  margin: 1rem 0;
   flex-grow: 1;
   /* border: 2px solid red; */
   display: flex;
@@ -194,6 +197,28 @@ section h1 {
   border: 1px solid rgba(255, 255, 255, 0);
   /* box-shadow: 0 0 5px rgba(255, 255, 255, 0); */
   transition: all 0.2s;
+}
+
+@media screen and (max-width: 768px) {
+  .section-what-weve-done .flex-container {
+    height: 1800px;
+  }
+
+  .section-what-weve-done .card {
+    width: 45%;
+  }  
+}
+
+@media screen and (max-width: 576px) {
+  .section-what-weve-done .flex-container {
+    height: 1800px;
+    flex-wrap: nowrap;
+    overflow-y: scroll;
+  }
+
+  .section-what-weve-done .card {
+    width: 100%;
+  }  
 }
 
 .section-what-weve-done .card:hover {
@@ -319,18 +344,22 @@ section h1 {
 
 .section-about-us .container {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
+  justify-items: stretch;
   width: 100%;
+  gap: 1rem;
 }
 
 .section-about-us .aboutus-img {
+  flex: 1 1 auto;
   display: flex;
   flex-flow: row nowrap;
   align-items: flex-end;
   grid-template: 1fr / 1fr;
   border: 1rem solid black;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
   position: relative;
+  width: 460px;
 }
 
 .section-about-us .caption {
@@ -343,6 +372,7 @@ section h1 {
 }
 
 .section-about-us .aboutus-desc {
+  flex: 1 1 auto;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 1rem;
   padding: 1rem;
